@@ -29,6 +29,8 @@ core:
 * win32: handle task run in a managed thread as this is more efficient than using
   perl fork with thread emulation under win32 and preserve a little memory usage.
 * win32: wait service control manager is ready before really starting the service
+* logger: don't use File::stat module to just get logfile file size, better use -s
+  as File::stat module seems to fail in rare case.
 
 inventory:
 * Fix lspci command subsystem parsing
